# RAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: inspect_retrieval.py  run_kjv_eval.py  smoke_phase2.py  smoke_phase2_old.py
src/verses_rag/: __init__.py  canon.py  schema.py
src/verses_rag/agents/: query_decomposer.py
src/verses_rag/agents/tools/: bible_reference.py
src/verses_rag/api/: app_state.py  main.py  schemas.py
src/verses_rag/config/: settings.py
src/verses_rag/embeddings/: __init__.py  dense.py  sparse.py
src/verses_rag/eval/: ab_test.py  dataset.py  generation_metrics.py  retrieval_metrics.py  runner.py  tracing.py
src/verses_rag/graph/: graph.py  state.py
src/verses_rag/graph/nodes/: analyze_filters.py  generate.py  grade_documents.py  rerank.py  retrieve.py  route.py  transform_query.py  verify.py
src/verses_rag/indexing/: indexer.py
src/verses_rag/ingestion/: article_processor.py  bible_processor.py  classifier.py  ingest.py  loader_router.py
src/verses_rag/llm/: router.py
src/verses_rag/retrieval/: reranker.py
src/verses_rag/stores/: __init__.py  base.py  memory_store.py  qdrant_store.py
src/verses_rag/web/: app.py
tests/ingestion/: test_article_processor.py  test_bible_processor.py  test_canon.py  test_classifier.py
