[project]
name = "verses-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "assimilatereality", email = "assimilatereality@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "langchain-anthropic>=1.4.5",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
verses-rag = "verses_rag:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernize syntax for py311)
    "B",   # flake8-bugbear (common bugs and design issues)
]
ignore = [
    "E501",  # line length — ruff format handles this; don't double-enforce
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"   # start here; "standard" later once it's clean
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

